[package]
name = "escape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.41.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(any(unix, macos))'.dependencies]
termion = "1.5"
tui = "0.16.0"

[target.'cfg(any(windows))'.dependencies]
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
crossterm = "0.20"